@@ -22,6 +22,7 @@ Gem::Specification.new do |spec|
   # spec.required_rubygems_version = ">= 1.3.6" # If you depend on prerelease gems
   # spec.add_runtime_dependency 'nokogiri' # Or what have you
   # spec.add_development_dependency 'cucumber'
+  # spec.add_development_dependency 'redgreen'
   # spec.add_development_dependency 'ronn'
   spec.add_development_dependency 'shoe'
 
