@@ -1,6 +1,13 @@
 require 'test/unit'
 require 'shoe'
 
+begin
+  require 'redgreen' if $stdout.tty?
+rescue LoadError
+  # Since we don't have hard gem dependencies for testing, folks can run `gem
+  # check --test shoe` without installing anything else.
+end
+
 module Shoe
   module TestExtensions
     autoload :FakeRubygemsServer,  'test/extensions/fake_rubygems_server'
